replace factory methods to flexible constructors