@@ -1,7 +1,11 @@
 package io.papermc.paper.event.entity;
 
+import java.util.Collections;
 import java.util.List;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.state.pattern.BlockPattern;
 import org.bukkit.block.Block;
+import org.bukkit.craftbukkit.block.CraftBlock;
 import org.bukkit.craftbukkit.event.entity.CraftEntityEvent;
 import org.bukkit.entity.Entity;
 import org.bukkit.event.HandlerList;
@@ -14,7 +18,11 @@ public class PaperEntityConstructEvent extends CraftEntityEvent implements Entit
 
     public PaperEntityConstructEvent(final Entity entity, final List<Block> blocks) {
         super(entity);
-        this.blocks = List.copyOf(blocks);
+        this.blocks = Collections.unmodifiableList(blocks);
+    }
+
+    public PaperEntityConstructEvent(final net.minecraft.world.entity.Entity entity, final Level level, final BlockPattern.BlockPatternMatch match) {
+        this(entity.getBukkitEntity(), CraftBlock.getMatchingBlocks(level, match));
     }
 
     @Override
